tests/sources/invalid/classes/constructor_param_syntax_errors.fire
// Malformed constructor parameter lists. Constructors parse their own
// receiver/parameter list separately from regular methods (see
// receiver_readonly_mutation_errors.fire / class_def_syntax_errors.fire for
// the method-level equivalents of these checks).

// '&' not immediately followed by 'this' in a constructor is parsed as a
// plain borrowed parameter (not a receiver), so 'other' is consumed as the
// parameter name and parsing then fails at the missing ':'.
class R1 {
    v: int32;

    fn R1(&other) {  //~ ERROR FS-PARSE-0010 @17
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// 'owned' not immediately followed by 'this' in a constructor is parsed as
// the owned-parameter modifier, so 'other' is consumed as the parameter name
// and parsing then fails at the missing ':'.
class R2 {
    v: int32;

    fn R2(owned other) {  //~ ERROR FS-PARSE-0010 @22
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// A static constructor also can't declare a '&this' receiver.
class R3 {
    v: int32;

    static fn R3(&this) {  //~ ERROR FS-PARSE-0012 @15
//~^ ERROR FS-PARSE-0012 @19
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Constructor parameter type invalid.
class P1 {
    v: int32;

    fn P1(&this, x: !) {  //~ ERROR FS-PARSE-0010 @21
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Array parameters are not supported for constructors either.
class P2 {
    v: int32;

    fn P2(&this, xs: int32[]) {  //~ ERROR FS-PARSE-0012 @22
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing constructor parameter name.
class P3 {
    v: int32;

    fn P3(&this, : int32) {  //~ ERROR FS-PARSE-0010 @18
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing ')' after constructor parameters.
class P4 {
    v: int32;

    fn P4(&this {  //~ ERROR FS-PARSE-0010 @17
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing '{' to start constructor body.
class P5 {
    v: int32;

    fn P5(&this)
    topLevel5: int32 = 1;  //~ ERROR FS-PARSE-0010 @5
}
